--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -43,38 +43,6 @@
     <table>
         <tr>
             <td>
-                <fieldset style="width:180px;height:80px">
-                    <legend>Amplitude scale</legend>
-                    <input type="radio" id="ScaleLinear" name="Scale">
-                    <label for="ScaleLinear">Linear</label><br>
-                    <input type="radio" id="ScaleLog" name="Scale" checked>
-                    <label for="ScaleLog">dB</label><br>
-                    <input type="radio" id="ScalePSD" name="Scale">
-                    <label for="ScalePSD">Power Spectral Density</label><br>
-                </fieldset>
-            </td>
-            <td>
-                <fieldset style="width:150px;height:80px">
-                    <legend>Frequency scale</legend>
-                    <table>
-                        <tr>
-                            <td>
-                                <input type="radio" id="freq_ScaleLinear" name="feq_scale" checked>
-                                <label for="freq_ScaleLinear">Linear</label><br>
-                                <input type="radio" id="freq_ScaleLog" name="feq_scale">
-                                <label for="freq_ScaleLog">Log</label><br>
-                            </td>
-                            <td>
-                                <input type="radio" id="freq_Scale_Hz" name="feq_unit" checked>
-                                <label for="freq_Scale_Hz">Hz</label><br>
-                                <input type="radio" id="freq_Scale_RPM" name="feq_unit">
-                                <label for="freq_Scale_RPM">RPM</label><br>
-                            </td>
-                        </tr>
-                    </table>
-                </fieldset>
-            </td>
-            <td>
                 <fieldset style="width:100px;height:80px">
                     <legend>Log type</legend>
                     <input type="radio" id="log_type_batch" name="log_type" checked>
@@ -109,13 +77,13 @@
                     <input id="TimeEnd" name="TimeEnd" type="number" min="0" step="1" value="0" onchange="" style="width:50px" disabled/>
                 </fieldset>
             </td>
+            <td style="width: 10px;"></td>
+            <td>
+                <input id="fileItem" type="file" accept=".bin" onchange="readFile(this)"><br><br>
+                <input type="button" id="calculate" value="Calculate" onclick="re_calc()" disabled>
+            </td>
         </tr>
     </table>
-    <p>
-        Bin log:
-        <input id="fileItem" type="file" accept=".bin" onchange="readFile(this)">
-        <input type="button" id="calculate" value="Calculate" onclick="re_calc()" disabled>
-    </p>
 </fieldset>
 </td>
 </tr>
@@ -125,14 +93,45 @@
 </p>
 <table>
     <tr>
+        <td style="width: 275px;"></td>
+        <td>
+            <fieldset style="width:300px;height:40px">
+                <legend>Amplitude scale</legend>
+                <input type="radio" id="ScaleLinear" name="Scale" onchange="redraw()">
+                <label for="ScaleLinear">Linear</label>
+                <input type="radio" id="ScaleLog" name="Scale" onchange="redraw()" checked>
+                <label for="ScaleLog">dB</label>
+                <input type="radio" id="ScalePSD" name="Scale" onchange="redraw()">
+                <label for="ScalePSD">Power Spectral Density</label>
+            </fieldset>
+        </td>
+        <td>
+            <fieldset style="width:260px;height:40px">
+                <legend>Frequency scale</legend>
+                        <input type="radio" id="freq_ScaleLinear" name="feq_scale" onchange="redraw()" checked>
+                        <label for="freq_ScaleLinear">Linear</label>
+                        <input type="radio" id="freq_ScaleLog" name="feq_scale" onchange="redraw()">
+                        <label for="freq_ScaleLog">Log</label>
+                        &nbsp&nbsp&nbsp&nbsp
+                        <input type="radio" id="freq_Scale_Hz" name="feq_unit" onchange="redraw()" checked>
+                        <label for="freq_Scale_Hz">Hz</label>
+                        <input type="radio" id="freq_Scale_RPM" name="feq_unit" onchange="redraw()">
+                        <label for="freq_Scale_RPM">RPM</label>
+                </table>
+            </fieldset>
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
         <td style="width: 60px;"></td>
         <td>
             <fieldset style="width:300px">
-                <legend>Gyro 1</legend>
+                <legend ondblclick="update_hidden(this)">Gyro 1</legend>
                 <label id="Gyro0_info"><br></label>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Pre-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Pre-filter</legend>
                         <input type="checkbox" id="Gyro0PreX" name="Gyro0PreX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro0PreX">X</label>
 
@@ -145,7 +144,7 @@
                 </p>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Post-filter</legend>
                         <input type="checkbox" id="Gyro0PostX" name="Gyro0PostX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro0PostX">X</label>
 
@@ -158,7 +157,7 @@
                 </p>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Estimated post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Estimated post-filter</legend>
                         <input type="checkbox" id="Gyro0PostEstX" name="Gyro0PostEstX" onchange="update_hidden(this)" disabled>
                         <label for="Gyro0PostEstX">X</label>
 
@@ -174,11 +173,11 @@
         </td>
         <td>
             <fieldset style="width:300px">
-                <legend>Gyro 2</legend>
+                <legend ondblclick="update_hidden(this)">Gyro 2</legend>
                 <label id="Gyro1_info"><br></label>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Pre-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Pre-filter</legend>
                         <input type="checkbox" id="Gyro1PreX" name="Gyro1PreX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro1PreX">X</label>
 
@@ -191,7 +190,7 @@
                     </p>
                     <p>
                     <fieldset style="width:300px">
-                        <legend>Post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Post-filter</legend>
                         <input type="checkbox" id="Gyro1PostX" name="Gyro1PostX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro1PostX">X</label>
 
@@ -204,7 +203,7 @@
                 </p>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Estimated post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Estimated post-filter</legend>
                         <input type="checkbox" id="Gyro1PostEstX" name="Gyro1PostEstX" onchange="update_hidden(this)" disabled>
                         <label for="Gyro1PostEstX">X</label>
 
@@ -220,11 +219,11 @@
         </td>
         <td>
             <fieldset style="width:300px">
-                <legend>Gyro 3</legend>
+                <legend ondblclick="update_hidden(this)">Gyro 3</legend>
                 <label id="Gyro2_info"><br></label>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Pre-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Pre-filter</legend>
                         <input type="checkbox" id="Gyro2PreX" name="Gyro2PreX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro2PreX">X</label>
 
@@ -237,7 +236,7 @@
                 </p>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Post-filter</legend>
                         <input type="checkbox" id="Gyro2PostX" name="Gyro2PostX" onchange="update_hidden(this)" checked disabled>
                         <label for="Gyro2PostX">X</label>
     
@@ -250,7 +249,7 @@
                 </p>
                 <p>
                     <fieldset style="width:300px">
-                        <legend>Estimated post-filter</legend>
+                        <legend ondblclick="update_hidden(this)">Estimated post-filter</legend>
                         <input type="checkbox" id="Gyro2PostEstX" name="Gyro2PostEstX" onchange="update_hidden(this)" disabled>
                         <label for="Gyro2PostEstX">X</label>
     
