--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -8,6 +8,7 @@
 <script src="https://unpkg.com/browser-cjs/require.min.js"></script>
 <script type="text/javascript" src="DecodeDevID.js"></script>
 <script type="text/javascript" src="FilterReview.js"></script>
+<script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
