--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="filters.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
+<script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 </head>
@@ -19,15 +20,21 @@
 
 <style>
         div.plotly-notifier {
-        visibility: hidden;
-}
+                visibility: hidden;
+        }
+
+        label.parameter_input_label {
+                display: inline-block;
+                width: 165px;
+                margin:5px 0px;
+        }
 </style>
 
 <h1>ArduPilot Filter Analysis</h1>
 
 The following form will display the attenuation and phase lag for an
 ArduPilot 4.2 filter setup.
-<body onload="load(); fill_docs(); update_all_hidden(); calculate_filter(); calculate_pid();">
+<body onload="load(); update_all_hidden(); calculate_filter(); calculate_pid();">
 <div id="Bode" style="width:1200px;height:900px"></div>
 <p>
   <input type="button" id="calculate" value="Calculate">
@@ -97,96 +104,77 @@ ArduPilot 4.2 filter setup.
                 <input id="GyroSampleRate" name="GYRO_SAMPLE_RATE" type="number" step="1" value="2000"/>
 	</p>
         <p>
-                <label for="INS_GYRO_FILTER">INS_GYRO_FILTER</label>
-                <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0"/>
+                <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" style="width: 100px"/>
 	</p>
 </fieldset>
-<fieldset style="max-width:1200px">
-  <legend>First Notch Filter</legend>
-        <p>
-                <label for="INS_HNTCH_ENABLE">INS_HNTCH_ENABLE</label>
-                <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="0" onchange="update_hidden(this.id); fill_docs();"/>
-                <label id="INS_HNTCH_ENABLE.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTCH_MODE">INS_HNTCH_MODE</label>
-                <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="0" onchange="update_hidden_mode(); fill_docs();"/>
-                <label id="INS_HNTCH_MODE.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTCH_FREQ">INS_HNTCH_FREQ</label>
-                <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="0"/>
-        </p>
-        <p>
-                <label for="INS_HNTCH_BW">INS_HNTCH_BW</label>
-                <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="0"/>
-        </p>
-        <p>
-                <label for="INS_HNTCH_ATT">INS_HNTCH_ATT</label>
-                <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTCH_REF">INS_HNTCH_REF</label>
-                <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTCH_FM_RAT">INS_HNTCH_FM_RAT</label>
-                <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="1.0"/>
-	</p>
-        <p>
-                <label for="INS_HNTCH_HMNCS">INS_HNTCH_HMNCS</label>
-                <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="1"/>
-                <label id="INS_HNTCH_HMNCS.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTCH_OPTS">INS_HNTCH_OPTS</label>
-                <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0"/>
-                <label id="INS_HNTCH_OPTS.doc"></label>
-        </p>
-</fieldset>
-<fieldset style="max-width:1200px">
-  <legend>Second Notch Filter</legend>
-        <p>
-                <label for="INS_HNTC2_ENABLE">INS_HNTC2_ENABLE</label>
-                <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" onchange="update_hidden(this.id); fill_docs();"/>
-                <label id="INS_HNTC2_ENABLE.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTC2_MODE">INS_HNTC2_MODE</label>
-                <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" onchange="update_hidden_mode(); fill_docs();"/>
-                <label id="INS_HNTC2_MODE.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTC2_FREQ">INS_HNTC2_FREQ</label>
-                <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTC2_BW">INS_HNTC2_BW</label>
-                <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTC2_ATT">INS_HNTC2_ATT</label>
-                <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTC2_REF">INS_HNTC2_REF</label>
-                <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0"/>
-	</p>
-        <p>
-                <label for="INS_HNTC2_FM_RAT">INS_HNTC2_FM_RAT</label>
-                <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="1.0"/>
-	</p>
-        <p>
-                <label for="INS_HNTC2_HMNCS">INS_HNTC2_HMNCS</label>
-                <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="1"/>
-                <label id="INS_HNTC2_HMNCS.doc"></label>
-        </p>
-        <p>
-                <label for="INS_HNTC2_OPTS">INS_HNTC2_OPTS</label>
-                <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0"/>
-                <label id="INS_HNTC2_OPTS.doc"></label>
-        </p>
-</fieldset>
+<table>
+        <tr>
+        <td>
+        <fieldset style="width:580px">
+            <legend>First Notch Filter</legend>
+            <p>
+                <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden(this.id)"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden_mode()"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0" style="width: 100px"/>
+            </p>
+        </fieldset>
+        </td>
+        <td>
+        <fieldset style="width:580px">
+            <legend>Second Notch Filter</legend>
+            <p>
+                <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden(this.id)"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden_mode()"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0"style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="0" style="width: 100px"/>
+            </p>
+            <p>
+                <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0" style="width: 100px"/>
+            </p>
+        </fieldset>
+        </td>
+        </tr>
+        </table>
 <fieldset style="max-width:1200px" id="Throttle_input">
         <legend>Throttle Based</legend>
               <p>
@@ -294,76 +282,60 @@ ArduPilot 4.2 filter setup.
         <fieldset style="max-width:1200px">
         <legend>Loop Rate</legend>
                <p>
-                        <label for="SCHED_LOOP_RATE">SCHED_LOOP_RATE</label>
-                        <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400"/>
+                        <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400" data-paramValues="false"/>
                 </p>
         </fieldset>
         <fieldset style="max-width:1200px">
         <legend>Roll</legend>
                 <p>
-                        <label for="ATC_RAT_RLL_P">ATC_RAT_RLL_P</label>
                         <input id="ATC_RAT_RLL_P" name="ATC_RAT_RLL_P" type="number" step="0.01" value="0.135"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_RLL_I">ATC_RAT_RLL_I</label>
                         <input id="ATC_RAT_RLL_I" name="ATC_RAT_RLL_I" type="number" step="0.01" value="0.135"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_RLL_D">ATC_RAT_RLL_D</label>
                         <input id="ATC_RAT_RLL_D" name="ATC_RAT_RLL_D" type="number" step="0.0001" value="0.0036"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_RLL_FLTE">ATC_RAT_RLL_FLTE</label>
                         <input id="ATC_RAT_RLL_FLTE" name="ATC_RAT_RLL_FLTE" type="number" step="0.01" value="0"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_RLL_FLTD">ATC_RAT_RLL_FLTD</label>
                         <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_RLL_FLTD" type="number" step="0.01" value="20"/>
                 </p>
         </fieldset>
         <fieldset style="max-width:1200px">
         <legend>Pitch</legend>
                 <p>
-                        <label for="ATC_RAT_PIT_P">ATC_RAT_PIT_P</label>
                         <input id="ATC_RAT_PIT_P" name="ATC_RAT_PIT_P" type="number" step="0.01" value="0.135"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_PIT_I">ATC_RAT_PIT_I</label>
                         <input id="ATC_RAT_PIT_I" name="ATC_RAT_PIT_I" type="number" step="0.01" value="0.135"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_PIT_D">ATC_RAT_PIT_D</label>
                         <input id="ATC_RAT_PIT_D" name="ATC_RAT_PIT_D" type="number" step="0.0001" value="0.0036"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_PIT_FLTE">ATC_RAT_PIT_FLTE</label>
                         <input id="ATC_RAT_PIT_FLTE" name="ATC_RAT_PIT_FLTE" type="number" step="0.01" value="0"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_PIT_FLTD">ATC_RAT_PIT_FLTD</label>
                         <input id="ATC_RAT_PIT_FLTD" name="ATC_RAT_PIT_FLTD" type="number" step="0.01" value="20"/>
                 </p>
         </fieldset>
         <fieldset style="max-width:1200px">
         <legend>Yaw</legend>
                 <p>
-                        <label for="ATC_RAT_YAW_P">ATC_RAT_YAW_P</label>
                         <input id="ATC_RAT_YAW_P" name="ATC_RAT_YAW_P" type="number" step="0.01" value="0.09"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_YAW_I">ATC_RAT_YAW_I</label>
                         <input id="ATC_RAT_YAW_I" name="ATC_RAT_YAW_I" type="number" step="0.01" value="0.009"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_YAW_D">ATC_RAT_YAW_D</label>
                         <input id="ATC_RAT_YAW_D" name="ATC_RAT_YAW_D" type="number" step="0.0001" value="0"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_YAW_FLTE">ATC_RAT_YAW_FLTE</label>
                         <input id="ATC_RAT_YAW_FLTE" name="ATC_RAT_YAW_FLTE" type="number" step="0.01" value="2.5"/>
                 </p>
                 <p>
-                        <label for="ATC_RAT_YAW_FLTD">ATC_RAT_YAW_FLTD</label>
                         <input id="ATC_RAT_YAW_FLTD" name="ATC_RAT_YAW_FLTD" type="number" step="0.01" value="0"/>
                 </p>
         </fieldset>
@@ -378,6 +350,18 @@ ArduPilot 4.2 filter setup.
   //clear_btn.onclick = function() {
   //    clear_cookies();
   //}
+
+  let params = ["SCHED_LOOP_RATE"]
+  var inputs = document.getElementsByTagName("input");
+  for (param of inputs) {
+      if (param.id.startsWith("INS_") || param.id.startsWith("ATC_")) {
+          params.push(param.id)
+      }
+  }
+
+  load_param_inputs("params.json", params)
+
+
 </script>
 
 </body>
