--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -6,8 +6,8 @@
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 <script src="https://unpkg.com/browser-cjs/require.min.js"></script>
-<script type="text/javascript" src="DecodeDevID.js"></script>
 <script type="text/javascript" src="FilterReview.js"></script>
+<script type="text/javascript" src="../Libraries/DecodeDevID.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
